Esegue lo scheduling oltre i 60 giorni

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -97,3 +97,12 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
+
+  # Avoid disabling the scheduling of the action after 60 days of inactivity
+  workflow-keepalive:
+    if: github.event_name == 'schedule'
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+    steps:
+      - uses: liskin/gh-workflow-keepalive@v1
